Phase2/proj
athira@INTVMLT2342:/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/build$ make
Consolidate compiler generated dependencies of target server
[ 16%] Building CXX object CMakeFiles/server.dir/source/server.cpp.o
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/source/server.cpp: In function ‘void sendStatsPeriodically()’:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/source/server.cpp:94:21: error: ‘struct httplib::Response’ has no member named ‘write’
   94 |             client->write(response_data.c_str(), response_data.size());
      |                     ^~~~~
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/source/server.cpp: In function ‘void handleClientRequest(const httplib::Request&, httplib::Response&)’:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/source/server.cpp:105:29: error: no matching function for call to ‘httplib::Response::set_content_provider(const char [18], handleClientRequest(const httplib::Request&, httplib::Response&)::<lambda(size_t, httplib::DataSink&)>)’
  105 |     res.set_content_provider(
      |     ~~~~~~~~~~~~~~~~~~~~~~~~^
  106 |         "text/event-stream",
      |         ~~~~~~~~~~~~~~~~~~~~
  107 |         [=](size_t, httplib::DataSink &sink)
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  108 |         {
      |         ~
  109 |             sink.os << "event: connected\n";
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  110 |             sink.os << "data: {\"message\": \"Connected to server\"}\n\n";
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  111 |         });
      |         ~~
In file included from /mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/source/server.cpp:1:
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/include/httplib.h:5889:13: note: candidate: ‘void httplib::Response::set_content_provider(size_t, const string&, httplib::ContentProvider, httplib::ContentProviderResourceReleaser)’
 5889 | inline void Response::set_content_provider(
      |             ^~~~~~~~
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/include/httplib.h:5889:13: note:   candidate expects 4 arguments, 2 provided
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/include/httplib.h:5899:13: note: candidate: ‘void httplib::Response::set_content_provider(const string&, httplib::ContentProviderWithoutLength, httplib::ContentProviderResourceReleaser)’
 5899 | inline void Response::set_content_provider(
      |             ^~~~~~~~
/mnt/c/Users/2022004/Desktop/SystemStatLoggingMicroservice/include/httplib.h:5900:67: note:   no known conversion for argument 2 from ‘handleClientRequest(const httplib::Request&, httplib::Response&)::<lambda(size_t, httplib::DataSink&)>’ to ‘httplib::ContentProviderWithoutLength’ {aka ‘std::function<bool(long unsigned int, httplib::DataSink&)>’}
 5900 | g &content_type, ContentProviderWithoutLength provider,
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~

make[2]: *** [CMakeFiles/server.dir/build.make:76: CMakeFiles/server.dir/source/server.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/server.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
